k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploysafe-deployment
  namespace: deploysafe
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: deploysafe
  template:
    metadata:
      labels:
        app: deploysafe
    spec:
      containers:
        - name: deploysafe-container
          image: purvaawankhede/deploysafe-app:latest
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
